fix half Sonar issues